src/main/kotlin/com/example/error/PlayerLimitExceededException.kt
package com.example.error

import com.example.models.PLAYERS_COUNT

class PlayerLimitExceededException: Exception("only $PLAYERS_COUNT players are allowed")